--- a/pallas template/about.html
+++ b/pallas template/about.html
@@ -268,7 +268,7 @@
 		</div>
 	</section>
 -->
-	<section class="section white-background padding-bottom hidden-sec">
+	<!-- <section class="section white-background padding-bottom hidden-sec">
 		<div class="container">
 			<div class="sixteen columns">
 				<div class="section-header-text-left">
@@ -327,7 +327,7 @@
 				</div>	
 			</div>
 		</div>
-	</section>
+	</section> -->
 	
 	<footer class="footer no-shadow">
 		<div class="container">
@@ -343,8 +343,8 @@
 		<div class="container">
 			<div class="sixteen columns">
 				<div class="footer-copy-text">
-					<p>© We are Pallas. All rights reserved. 2015</p>
-					<p>Made by IG Design in Kraljevo, Serbia</p>
+					<p>© Nicoleth Lara Encina. 2020</p>
+					<p>UX Designer apasionada por la literatura, el café y los gatitos</p>
 				</div>
 			</div>
 		</div>
