--- a/pallas template/index.html
+++ b/pallas template/index.html
@@ -185,8 +185,8 @@
 		<div class="container">
 			<div class="sixteen columns">
 				<div class="footer-copy-text">
-					<p>© We are Pallas. All rights reserved. 2015</p>
-					<p>Made by IG Design in Kraljevo, Serbia</p>
+					<p>© Nicoleth Lara Encina. 2020</p>
+					<p>UX Designer apasionada por la literatura, el café y los gatitos</p>
 				</div>
 			</div>
 		</div>
