--- a/pallas template/work3.html
+++ b/pallas template/work3.html
@@ -93,11 +93,11 @@
 			<div class="sixteen columns">
 				<div id="portfolio-filter">
 					<ul id="filter">
-						<li><a href="#" class="current" data-filter="*" title="">All</a></li>
-						<li><a href="#" data-filter=".branding" title="">branding</a></li>
-						<li><a href="#" data-filter=".photo" title="">photo</a></li>
-						<li><a href="#" data-filter=".motion" title="">Motion</a></li>
-						<li><a href="#" data-filter=".web" title="">Web</a></li>
+						<li><a href="#" class="current" data-filter="*" title="">Todo</a></li>
+						<li><a href="#" data-filter=".branding" title="">UX Writing</a></li>
+						<li><a href="#" data-filter=".photo" title="">UX Design</a></li>
+						<li><a href="#" data-filter=".motion" title="">UX Research</a></li>
+						
 					</ul>
 				</div>
 			</div>	
@@ -105,43 +105,43 @@
 		
 			<div id="projects-grid">
 				<a href="project1.html" class="animsition-link">
-					<div class="portfolio-box-1 box-half photo">
+					<div class="portfolio-box-1 box-half branding motion">
 						<div class="mask-1"></div>
-						<img src="images/portfolio/18.jpg" alt="">
+						<img src="images/portfolio/cartalaborum1.jpeg" alt="">
 						<h6>Laborum</h6>
 						<div class="line-mask"></div>
 						<p>ver estudio de caso</p>
 					</div>
 				</a>
 				<a href="project2.html" class="animsition-link">
-					<div class="portfolio-box-1 box-half photo web">
+					<div class="portfolio-box-1 box-half photo motion">
 						<div class="mask-1"></div>
-						<img src="images/portfolio/19.jpg" alt="">
+						<img src="images/portfolio/cartawelokat.jpg" alt="">
 						<h6>Welokat</h6>
 						<div class="line-mask"></div>
 						<p>ver estudio de caso</p>
 					</div>
 				</a>
 				<a href="project3.html" class="animsition-link">
-					<div class="portfolio-box-1 box-half branding">
+					<div class="portfolio-box-1 box-half branding photo motion">
 						<div class="mask-1"></div>
-						<img src="images/portfolio/12.jpg" alt="">
+						<img src="images/portfolio/cartaisof.jpg" alt="">
 						<h6>Tablas iSOf</h6>
 						<div class="line-mask"></div>
 						<p>ver estudio de caso</p>
 					</div>
 				</a>
 				<a href="project4.html" class="animsition-link">
-					<div class="portfolio-box-1 box-half motion">
+					<div class="portfolio-box-1 box-half photo motion">
 						<div class="mask-1"></div>
-						<img src="images/portfolio/1.jpg" alt="">
+						<img src="images/portfolio/cartamenu.jpg" alt="">
 						<h6>Servicio de Impuestos Internos</h6>
 						<div class="line-mask"></div>
 						<p>ver estudio de caso</p>
 					</div>
 				</a>
 				<a href="project5.html" class="animsition-link">
-					<div class="portfolio-box-1 box-half branding">
+					<div class="portfolio-box-1 box-half photo motion">
 						<div class="mask-1"></div>
 						<img src="images/portfolio/24.jpg" alt="">
 						<h6>Menú to Go</h6>
@@ -211,8 +211,8 @@
 		<div class="container">
 			<div class="sixteen columns">
 				<div class="footer-copy-text">
-					<p>© We are Pallas. All rights reserved. 2015</p>
-					<p>Made by IG Design in Kraljevo, Serbia</p>
+					<p>© Nicoleth Lara Encina. 2020</p>
+					<p>UX Designer apasionada por la literatura, el café y los gatitos</p>
 				</div>
 			</div>
 		</div>
