--- a/pallas template/index.html
+++ b/pallas template/index.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>PALLAS</title>
+	<title>Nicoleth Lara</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
