arreglo link portafolio, img fonde contacto, elimine iconos de redes sociales de  footer

--- a/pallas template/index.html
+++ b/pallas template/index.html
@@ -143,7 +143,7 @@
 				<div class="block-text">
 					<h2>Portafolio<span>.</span></h2>
 					<p>Me encanta empezar nuevos proyectos y crear soluciones digitales que sean memorables, funcionales y creativas. Busco generar un impacto real en las personas que las usan.</p>
-					<a href="work.html" class="btn animsition-link">revisa mis proyectos</a>
+					<a href="work3.html" class="btn animsition-link">revisa mis proyectos</a>
 				</div>
 			</div>
 		</div>
@@ -173,14 +173,7 @@
 	
 	<footer class="footer">
 		<div class="container">
-			<div class="sixteen columns">
-				<div class="footer-social">
-					<a href="#">twitter</a>
-					<a href="#">github</a>
-					<a href="#">facebook</a>
-					<a href="#">google +</a>
-				</div>
-			</div>
+			
 		</div>
 		<div class="container">
 			<div class="sixteen columns">
