--- a/pallas template/work3.html
+++ b/pallas template/work3.html
@@ -200,12 +200,12 @@
 	<footer class="footer no-shadow">
 		<div class="container">
 			<div class="sixteen columns">
-				<div class="footer-social">
+				<!-- <div class="footer-social">
 					<a href="#">twitter</a>
 					<a href="#">github</a>
 					<a href="#">facebook</a>
 					<a href="#">google +</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="container">
