--- a/pallas template/about.html
+++ b/pallas template/about.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Nicoleth Lara Encina</title>
+	<title>Nicoleth Portafolio</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
